<resources>
    <string name="app_name">SignupForm</string>

    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="country">Country</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

    <string-array name="country">
        <item>Nepal</item>
        <item>India</item>
        <item>China</item>
    </string-array>
</resources>