<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/fullNameEditText"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />


        <EditText
            android:id="@+id/mobileNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/addressEditText"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <LinearLayout
            android:id="@+id/genderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileNumberEditText"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/otherRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/others" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/countryLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderLinearLayout"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_edittext"
                android:entries="@array/country" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/termsAndConditionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryLinearLayout"
            android:text="@string/terms_conditions" />

        <Button
            android:id="@+id/singupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/termsAndConditionCheckBox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@drawable/customn_button"
            android:text="@string/signup"
            android:textAllCaps="false" />

    </RelativeLayout>
</ScrollView>